src/objects/SNI_FL_Message_Notification__c.object
<CustomObject>
    <description>Store the FeedComment data by using the trigger(InsertMessageNotificationTrigger) into this object in order to mark new message notification label in the family link</description>
    <fields>
        <fullName>FeedCommentId__c</fullName>
        <description>Store the Id in FeedComment</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FeedCommentId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FeedId__c</fullName>
        <description>Store the ParentId in FeedComment</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FeedId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsViewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default value is false</description>
        <label>IsViewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MessageDate__c</fullName>
        <description>Store the Createddate in FeedComment</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MessageDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RecipientId__c</fullName>
        <description>Store all the MemberIds in DirectMessageMember related to a specific feed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>RecipientId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SenderId__c</fullName>
        <description>Store the CreatedById in FeedComment</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SenderId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>SNI FL Message Notification</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SNI FL Message Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SNI FL Message Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>